--- a/src/components/Filmlist/Filmlist.module.css
+++ b/src/components/Filmlist/Filmlist.module.css
@@ -2,6 +2,10 @@
     margin-left: 50px;
 }
 
+.item::marker {
+    font-size: 25px;
+}
+
 .link {
     font-size: 25px;
     /* margin-left: 50px; */
