--- a/src/components/SharedLayout/SharedLayout.module.css
+++ b/src/components/SharedLayout/SharedLayout.module.css
@@ -2,6 +2,8 @@
     width: 100%;
     box-shadow: 0px 5px 10px 0px rgba(0,0,0,0.6);
     font-size: 30px;
+    background: rgb(34,193,195);
+    background: linear-gradient(0deg, rgba(34,193,195,0.3) 0%, rgba(253,187,45,0.3) 100%);
 }
 
 .nav {
