--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  /* background-color: rgb(250, 245, 255); */
 }
 
 code {
@@ -20,9 +21,9 @@ p, h1, h2, h3, h4, h5, h6, ul, ol {
 }
 
 /* li {
-  margin-left: 50px;
+  list-style: circle;
 } */
 
 .active {
-  color: rgb(201, 4, 119);
+  color: rgb(253, 42, 130);
 }
