--- a/src/pages/MovieDetails/MovieDetails.module.css
+++ b/src/pages/MovieDetails/MovieDetails.module.css
@@ -1,15 +1,26 @@
 .back {
     font-size: 20px;
-    display: block;
-    margin: 10px;
+    /* display: block; */
+    /* margin: 10px; */
+    margin-left: 10px;
 }
 
 .container {
     display: flex;
+    padding: 5px;
     gap: 10px;
     /* justify-content: start; */
     align-items: start;
+    margin-top: 10px;
     margin-bottom: 20px;
+    box-shadow: 0px 5px 10px 0px rgba(0,0,0,0.6);
+    background-color: rgb(240, 255, 255);
+    /* background: rgb(240, 255, 255); */
+    /* background: linear-gradient(0deg, rgba(34,193,195,0.3) 0%, rgba(253,187,45,0.3) 100%); */
+}
+
+.poster {
+    height: 375px;
 }
 
 .title {
@@ -26,6 +37,14 @@
 }
 
 .additional {
+    box-shadow: 0px 5px 3px 0px rgba(0,0,0,0.4);
+    /* margin-bottom: 20px; */
+    /* padding-top: 20px; */
+    padding-bottom: 10px;
+    background-color: #fff;
+}
+
+.additional_title {
     font-size: 30px;
     margin-left: 20px;
 }
@@ -33,6 +52,11 @@
 .item {
     margin-left: 50px;
 }
+
+.item::marker {
+    font-size: 25px;
+}
+
 
 .link {
     font-size: 25px;
