--- a/src/pages/MovieDetails/MovieDetails.module.css
+++ b/src/pages/MovieDetails/MovieDetails.module.css
@@ -10,7 +10,7 @@
     padding: 5px;
     gap: 10px;
     /* justify-content: start; */
-    align-items: start;
+    align-items: flex-start;
     margin-top: 10px;
     margin-bottom: 20px;
     box-shadow: 0px 5px 10px 0px rgba(0,0,0,0.6);
