--- a/src/pages/MovieDetails/MovieDetails.module.css
+++ b/src/pages/MovieDetails/MovieDetails.module.css
@@ -1,3 +1,7 @@
+/* .section {
+    display: block;
+} */
+
 .back {
     font-size: 20px;
     /* display: block; */
@@ -17,6 +21,7 @@
     background-color: rgb(240, 255, 255);
     /* background: rgb(240, 255, 255); */
     /* background: linear-gradient(0deg, rgba(34,193,195,0.3) 0%, rgba(253,187,45,0.3) 100%); */
+    /* width: 100%; */
 }
 
 .poster {
