--- a/src/pages/Movies/Movies.module.css
+++ b/src/pages/Movies/Movies.module.css
@@ -23,3 +23,10 @@
 .button {
   font-size: 20px;
 }
+
+.nofilm {
+  font-size: 25px;
+  margin-left: 30px;
+  margin-top: 10px;
+  color: rgb(90, 0, 40);
+}
