--- a/src/pages/MovieDetails/MovieDetails.module.css
+++ b/src/pages/MovieDetails/MovieDetails.module.css
@@ -1,68 +1,57 @@
-/* .section {
-    display: block;
-} */
-
 .back {
-    font-size: 20px;
-    /* display: block; */
-    /* margin: 10px; */
-    margin-left: 10px;
+  font-size: 20px;
+
+  margin-left: 10px;
 }
 
 .container {
-    display: flex;
-    padding: 5px;
-    gap: 10px;
-    /* justify-content: start; */
-    align-items: flex-start;
-    margin-top: 10px;
-    margin-bottom: 20px;
-    box-shadow: 0px 5px 10px 0px rgba(0,0,0,0.6);
-    background-color: rgb(240, 255, 255);
-    /* background: rgb(240, 255, 255); */
-    /* background: linear-gradient(0deg, rgba(34,193,195,0.3) 0%, rgba(253,187,45,0.3) 100%); */
-    /* width: 100%; */
+  display: flex;
+  padding: 5px;
+  gap: 10px;
+
+  align-items: flex-start;
+  margin-top: 10px;
+  margin-bottom: 20px;
+  box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.6);
+  background-color: rgb(240, 255, 255);
 }
 
 .poster {
-    height: 375px;
+  height: 375px;
 }
 
 .title {
-    font-size: 30px;
+  font-size: 30px;
 }
 
 .subtitle {
-    font-size: 25px;
-    margin-top: 10px;
+  font-size: 25px;
+  margin-top: 10px;
 }
 
 .info {
-    font-size: 20px;
+  font-size: 20px;
 }
 
 .additional {
-    box-shadow: 0px 5px 3px 0px rgba(0,0,0,0.4);
-    /* margin-bottom: 20px; */
-    /* padding-top: 20px; */
-    padding-bottom: 10px;
-    background-color: #fff;
+  box-shadow: 0px 5px 3px 0px rgba(0, 0, 0, 0.4);
+
+  background-color: #fff;
 }
 
 .additional_title {
-    font-size: 30px;
-    margin-left: 20px;
+  font-size: 30px;
+  margin-left: 20px;
 }
 
 .item {
-    margin-left: 50px;
+  margin-left: 50px;
 }
 
 .item::marker {
-    font-size: 25px;
+  font-size: 25px;
 }
 
-
 .link {
-    font-size: 25px;
+  font-size: 25px;
 }
